Lagt til test-fnr i testoppsett